# riscv_kernel

./: .gdbinit  Cargo.toml  build.rs  flake.nix  riscv64-virt.dtb  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: main.yml
.helix/: languages.toml
src/: entry.S  io.rs  linker.ld  main.rs  memory.rs  sbi.rs  spin.rs  test_framework.rs  trap.rs  user.rs
src/devices/: dtb.rs  mod.rs  sbi_debug_console.rs  sbi_system_reset.rs  syscon.rs  uart.rs
src/memory/: memory_map.rs  paging.rs
src/sbi/: base.rs  debug_console.rs  system_reset.rs
src/trap/: cause.rs
