[package]
name = "riscv_kernel"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
bitfield = "0.16.1"
derive_more = { version = "1.0.0", default-features = false, features = ["display"] }
flat_device_tree = "3.1.1"
linked_list_allocator = "0.10.5"
spin = "0.9.8"
